# Noisemaker-VST

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows-vst3.yml
Source/: JuceHeader.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleEngine.cpp  SampleEngine.h
